# icepack

./: .gitignore  CHANGELOG.md  FORMAT.md  Pipfile  README.md  pyproject.toml  setup.cfg
src/icepack/: __init__.py  cli.py  error.py  helper.py  meta.py  model.py
tests/: helper.py  test_cli.py  test_compatibility.py  test_helper_age.py  test_helper_bzip2.py  test_helper_file.py  test_helper_gzip.py  test_helper_ssh.py  test_helper_zip.py  test_icepack.py  test_round_trip.py
tests/data/keys/: allowed_signers  identity.pub
