[metadata]
name = icepack
version = attr: icepack.VERSION
author = Alexander Dietrich
author_email = alexander@dietrich.cx
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alxndr42/icepack
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
