[metadata]
name = icepack
version = attr: icepack.meta.VERSION
author = Alexander Dietrich
author_email = alexander@dietrich.cx
description = Encrypting File Archiver
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alxndr42/icepack
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Development Status :: 4 - Beta

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    click ~= 8.0
    pydantic ~= 1.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    icepack = icepack.cli:icepack
